--- a/DotnetAngularBoilerplate.WebAPI/DotnetAngularBoilerplate.WebAPI.csproj
+++ b/DotnetAngularBoilerplate.WebAPI/DotnetAngularBoilerplate.WebAPI.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetAngularBoilerplate.LibraryReference\DotnetAngularBoilerplate.LibraryReference.csproj" />
+  </ItemGroup>
+
 </Project>
