--- a/DotnetAngularBoilerplate.Model/DotnetAngularBoilerplate.Model.csproj
+++ b/DotnetAngularBoilerplate.Model/DotnetAngularBoilerplate.Model.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CommandModel\Authentication\" />
+    <Folder Include="DtoModel\" />
+    <Folder Include="QueryModel\" />
   </ItemGroup>
 
 </Project>
