--- a/DotnetAngularBoilerplate.WebAPI/appsettings.json
+++ b/DotnetAngularBoilerplate.WebAPI/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Access-Control-Allow-Origin": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DotnetAngularBoilerplate.DB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
