--- a/DotnetAngularBoilerplate.WebAPI/appsettings.json
+++ b/DotnetAngularBoilerplate.WebAPI/appsettings.json
@@ -9,5 +9,10 @@
   "Access-Control-Allow-Origin": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DotnetAngularBoilerplate.DB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "ValidAudience": "http://ocalhost:4200",
+    "ValidIssuer": "https://localhost:44364",
+    "Secret": "JWTAuthenticationHIGHsecuredPassword"
   }
 }
