--- a/DotnetAngularBoilerplate.WebClient/.gitignore
+++ b/DotnetAngularBoilerplate.WebClient/.gitignore
@@ -5,7 +5,7 @@
 
 # dependencies
 /node_modules
-
+/package-lock.json
 # IDEs and editors
 /.idea
 .project
@@ -40,3 +40,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
