--- a/DotnetAngularBoilerplate.WebClient/package.json
+++ b/DotnetAngularBoilerplate.WebClient/package.json
@@ -46,6 +46,7 @@
     "@nebular/security": "10.0.0",
     "@nebular/theme": "10.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
+    "@types/ws": "^8.5.4",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
