Setup Angular Project with lazy loading

--- a/DotnetAngularBoilerplate.WebClient/angular.json
+++ b/DotnetAngularBoilerplate.WebClient/angular.json
@@ -91,8 +91,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a82e623c-1642-403a-a53a-8a6648824e36",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
