--- a/DotnetAngularBoilerplate.WebClient/tsconfig.json
+++ b/DotnetAngularBoilerplate.WebClient/tsconfig.json
@@ -19,10 +19,16 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "strictNullChecks": true,
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@ui": ["src/app/@shared/ui/index.ts"],
+      "@pages": ["src/app/pages/index.ts"]
+
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
