--- a/DotnetAngularBoilerplate.WebClient/angular.json
+++ b/DotnetAngularBoilerplate.WebClient/angular.json
@@ -96,7 +96,8 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/images/"
             ],
             "styles": [
               "src/styles.scss"
