--- a/DotnetAngularBoilerplate.WebClient/package.json
+++ b/DotnetAngularBoilerplate.WebClient/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng lint --fix && ng serve --configuration development",
+    "start": "ng lint --fix && ng serve --configuration development -o",
     "start-prod": "ng lint && ng serve --configuration production",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
