--- a/DotnetAngularBoilerplate.WebAPI/appsettings.json
+++ b/DotnetAngularBoilerplate.WebAPI/appsettings.json
@@ -14,7 +14,7 @@
     //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DotnetAngularBoilerplate.DB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JWT": {
-    "ValidAudience": "http://ocalhost:4200",
+    "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "https://localhost:44364",
     "Secret": "JWTAuthenticationHIGHsecuredPassword"
   }
