--- a/DotnetAngularBoilerplate.WebAPI/appsettings.json
+++ b/DotnetAngularBoilerplate.WebAPI/appsettings.json
@@ -8,9 +8,7 @@
   "AllowedHosts": "*",
   "Access-Control-Allow-Origin": "*",
   "ConnectionStrings": {
-
-    "DefaultConnection": "Server=tcp:devesh-test.database.windows.net,1433;Initial Catalog=DotnetAngularBoilerplate;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
-    //"DefaultConnection": "Server=tcp:devesh-test.database.windows.net,1433;Initial Catalog=DotnetAngularBoilerplate;Persist Security Info=False;User ID=dbadmin;Password=Voldemort@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:devesh-test.database.windows.net,1433;Initial Catalog=DotnetAngularBoilerplate;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;",
     //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DotnetAngularBoilerplate.DB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JWT": {
